--- a/04-myblogs-rest-es6/package.json
+++ b/04-myblogs-rest-es6/package.json
@@ -7,8 +7,8 @@
   "author": "Trayan Iliev",
   "license": "Apache-2.0",
   "scripts":{
-    "api": "json-server db.json --routes routes.json --port=30000",
-    "start": "lite-server --port 30001"
+    "api": "json-server db.json --routes routes.json --port=3000",
+    "start": "lite-server"
   },
   "devDependencies": {
     "json-server": "^0.17.0",
