--- a/07-ts-react/package.json
+++ b/07-ts-react/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -17,6 +18,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "api": "json-server db.json --routes routes.json --port=4000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
