--- a/10-react-native-intro/package.json
+++ b/10-react-native-intro/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
     "expo": "~46.0.7",
+    "expo-linking": "~3.2.2",
     "expo-status-bar": "~1.4.0",
+    "expo-web-browser": "~11.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
@@ -21,7 +23,12 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "react-error-overlay": "6.0.9",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": false,
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
+  }
 }
