--- a/10-react-native-intro/package.json
+++ b/10-react-native-intro/package.json
@@ -24,6 +24,7 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "react-error-overlay": "6.0.9",
+    "sharp-cli": "^2.1.1",
     "typescript": "~4.3.5"
   },
   "private": false,
