--- a/10-react-native-todos/package.json
+++ b/10-react-native-todos/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "api": "json-server db.json --routes routes.json --port=4000",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -20,6 +21,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "json-server": "^0.17.0",
     "typescript": "~4.3.5"
   },
   "private": true
