--- a/10-react-native-todos/package.json
+++ b/10-react-native-todos/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "api": "json-server db.json --routes routes.json --port=4000",
+    "api": "json-server db.json --routes routes.json --host=192.168.0.12 --port=4000",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
