--- a/09-ts-react-native/package.json
+++ b/09-ts-react-native/package.json
@@ -14,6 +14,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-date-picker": "^4.2.5",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
