--- a/14-react-native-blogs/package.json
+++ b/14-react-native-blogs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "09-ts-react-native",
+  "name": "14-react-native-blogs",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "0.17.0",
     "@react-native-community/datetimepicker": "6.2.0",
     "expo": "~46.0.7",
     "expo-status-bar": "~1.4.0",
