--- a/14-react-native-blogs/package.json
+++ b/14-react-native-blogs/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "api": "json-server db.json --routes routes.json --host=192.168.0.12 --port=4000",
+    "api": "json-server db.json --routes routes.json --host=192.168.1.101 --port=4000",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "0.17.0",
     "@react-native-community/datetimepicker": "6.2.0",
     "expo": "~46.0.7",
+    "expo-image-picker": "^13.3.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
