--- a/14-react-native-blogs/package.json
+++ b/14-react-native-blogs/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/webpack-config": "0.17.0",
     "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-picker/picker": "^2.4.4",
     "expo": "~46.0.7",
     "expo-image-picker": "^13.3.1",
     "expo-status-bar": "~1.4.0",
