--- a/14-react-native-blogs/package.json
+++ b/14-react-native-blogs/package.json
@@ -1,20 +1,22 @@
 {
   "name": "14-react-native-blogs",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "api": "json-server db.json --routes routes.json --host=192.168.0.12 --port=4000",
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "0.17.0",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-picker/picker": "^2.4.4",
-    "expo": "~46.0.7",
+    "expo": "~46.0.9",
+    "expo-camera": "^12.3.0",
     "expo-image-picker": "^13.3.1",
+    "expo-sharing": "~10.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -31,6 +33,7 @@
     "@types/react-native": "^0.69.5",
     "json-server": "^0.17.0",
     "react-error-overlay": "6.0.9",
+    "sharp-cli": "^2.1.1",
     "typescript": "~4.3.5"
   },
   "private": true
