--- a/14-react-native-blogs/package.json
+++ b/14-react-native-blogs/package.json
@@ -24,13 +24,15 @@
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "5.0.0-rc.4",
     "react-native-paper-dates": "^0.8.7",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-flow": "^7.18.6",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.69.5",
+    "@types/yup": "^0.32.0",
     "json-server": "^0.17.0",
     "react-error-overlay": "6.0.9",
     "sharp-cli": "^2.1.1",
