--- a/15-react-native-apis-comps/package.json
+++ b/15-react-native-apis-comps/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
     "expo": "~46.0.9",
+    "expo-image-manipulator": "~10.4.0",
     "expo-image-picker": "~13.3.1",
+    "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
