--- a/14-react-native-blogs/package.json
+++ b/14-react-native-blogs/package.json
@@ -14,7 +14,8 @@
     "@react-native-picker/picker": "^2.4.4",
     "expo": "~46.0.9",
     "expo-camera": "^12.3.0",
-    "expo-image-picker": "^13.3.1",
+    "expo-image-manipulator": "~10.4.0",
+    "expo-image-picker": "~13.3.1",
     "expo-sharing": "~10.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
