--- a/15-react-native-apis-comps/package.json
+++ b/15-react-native-apis-comps/package.json
@@ -15,13 +15,15 @@
     "expo-image-picker": "~13.3.1",
     "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
+    "fbjs": "^3.0.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "^0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/fbjs": "^3.0.3",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "typescript": "~4.3.5"
