--- a/15-react-native-apis-comps/package.json
+++ b/15-react-native-apis-comps/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
     "expo": "~46.0.9",
+    "expo-asset": "~8.6.1",
     "expo-image-manipulator": "~10.4.0",
     "expo-image-picker": "~13.3.1",
     "expo-sharing": "~10.3.0",
@@ -26,6 +27,7 @@
     "@types/fbjs": "^3.0.3",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "sharp-cli": "^2.1.1",
     "typescript": "~4.3.5"
   },
   "private": true
