rn demos updated

--- a/16-react-native-apis-comps/app.json
+++ b/16-react-native-apis-comps/app.json
@@ -30,13 +30,8 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": [
-      [
-        "@rnmapbox/maps",
-        {
-          "RNMapboxMapsImpl": "maplibre"
-        }
-      ]
-    ]
+    "extra": {
+      "fact": "kittens are cool"
+    }
   }
 }
