--- a/16-react-native-apis-comps/android/settings.gradle
+++ b/16-react-native-apis-comps/android/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = '15reactnativeapiscomps'
+rootProject.name = '15-react-native-apis-comps'
 
 apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle");
 useExpoModules()
