--- a/16-react-native-apis-comps/package.json
+++ b/16-react-native-apis-comps/package.json
@@ -9,20 +9,19 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
-    "@rnmapbox/maps": "rnmapbox/maps#main",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "~46.0.9",
-    "expo-asset": "~8.6.1",
-    "expo-dev-client": "~1.2.1",
+    "expo-asset": "^8.6.1",
     "expo-image-manipulator": "~10.4.0",
     "expo-image-picker": "~13.3.1",
     "expo-sharing": "~10.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "fbjs": "^3.0.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-web": "^0.18.9",
-    "expo-splash-screen": "~0.16.2"
+    "react-native-web": "^0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
