--- a/17-rn-navigation/package.json
+++ b/17-rn-navigation/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "0.17.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/devtools": "^6.0.9",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -24,6 +25,7 @@
     "expo-constants": "~13.2.4",
     "expo-font": "~10.2.0",
     "expo-linking": "~3.2.2",
+    "expo-secure-store": "~11.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
@@ -43,6 +45,8 @@
     "@types/react-native": "~0.69.1",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
+    "json-server": "^0.17.0",
+    "react-native-flipper": "^0.164.0",
     "react-test-renderer": "18.0.0",
     "typescript": "~4.3.5"
   },
