demos and presentations added

--- a/17-rn-navigation-redux/package.json
+++ b/17-rn-navigation-redux/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "shake": "adb shell input keyevent 82"
   },
   "jest": {
     "preset": "jest-expo"
