--- a/19-redux-basics-saga/package.json
+++ b/19-redux-basics-saga/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "0.17.0",
+    "@types/redux-saga": "^0.10.5",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
@@ -19,6 +20,7 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.2.1",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
